k8s/micro-services-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: micro-services-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/micro-services-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/micro-services-default: "true"
